--- a/apps/taller/templates/gestionar_slots.html
+++ b/apps/taller/templates/gestionar_slots.html
@@ -60,9 +60,9 @@
 							<td class="col-3">
 								<button class="btn btn-info" title="Ver detalles del Veh&iacute;culo">Ver&nbsp;&nbsp;<i class="fas fa-info-circle"></i></button>
 
-								<button class="btn btn-success" title="Editar Información del Veh&iacute;culo" data-toggle="modal" data-target="#editar-vehiculo-modal" data-id="{{vehiculo.id}}" data-placa="{{vehiculo.placa}}" data-tipo="{{vehiculo.tipo}}" data-marca="{{vehiculo.marca}}" data-modelo="{{vehiculo.modelo}}" data-anio="{{vehiculo.anio}}">Editar&nbsp;&nbsp;<i class="fas fa-pen"></i></button>
+								<button class="btn btn-success" title="Editar Información del Slot" data-toggle="modal" data-target="#editar-slot-modal" data-id="{{slot.id}}" data-disponible="{{slot.disponible}}" data-reservacion="{{slot.reservacion}}">Editar&nbsp;&nbsp;<i class="fas fa-pen"></i></button>
 
-								<button class="btn btn-danger" title="Eliminar el Veh&iacute;culo" data-toggle="modal" data-target="#eliminar-vehiculo-modal" data-id="{{vehiculo.id}}" data-placa="{{vehiculo.placa}}">Eliminar&nbsp;&nbsp;<i class="far fa-trash-alt"></i></button>
+								<button class="btn btn-danger" title="Eliminar el Slot" data-toggle="modal" data-target="#eliminar-slot-modal" data-id="{{slot.id}}">Eliminar&nbsp;&nbsp;<i class="far fa-trash-alt"></i></button>
 							</td>
 						</tr>
 					{% empty %}
@@ -77,110 +77,57 @@
 		</div>
 	</div>
 
-	<!-- Modal Agregar Vehiculo -->
-	<div class="modal fade" id="agregar-vehiculo-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+	<!-- Modal Editar Slot -->
+	<div class="modal fade" id="editar-slot-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
 		<div class="modal-dialog" role="document">
 			<div class="modal-content">
-				<form action="{% url 'agregar_vehiculo' %}" method="POST">
+				<form action="{% url 'editar_slot' %}" method="POST">
 					<div class="modal-header">
-						<h5 class="modal-title" id="exampleModalLabel">Agregar nuevo Veh&iacute;culo.</h5>
+						<h5 class="modal-title" id="exampleModalLabel">Editar Slot.</h5>
 						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 							<span aria-hidden="true">&times;</span>
 						</button>
 					</div>
 					<div class="modal-body">
 						{% csrf_token %}
-						<div class="form-group row">
-							<label for="placa" class="col-sm-2 col-form-label">Placa</label>
-							<div class="col-sm-10">
-								<input type="text" class="form-control" id="placa" name="placa" placeholder="">
-							</div>
-						</div>
-						<div class="form-group row">
-							<label for="tipo" class="col-sm-2 col-form-label">Tipo</label>
-							<div class="col-sm-10">
-								<input type="text" class="form-control" id="tipo" name="tipo" placeholder="">
-							</div>
-						</div>
-						<div class="form-group row">
-							<label for="marca" class="col-sm-2 col-form-label">Marca</label>
-							<div class="col-sm-10">
-								<input type="text" class="form-control" id="marca" name="marca" placeholder="">
-							</div>
-						</div>
-						<div class="form-group row">
-							<label for="modelo" class="col-sm-2 col-form-label">Modelo</label>
-							<div class="col-sm-10">
-								<input type="text" class="form-control" id="modelo" name="modelo" placeholder="">
-							</div>
-						</div>
-						<div class="form-group row">
-							<label for="anio" class="col-sm-2 col-form-label">Año</label>
-							<div class="col-sm-10">
-								<input type="text" class="form-control" id="anio" name="anio" placeholder="">
-							</div>
-						</div>
-						
-					</div>
-					<div class="modal-footer">
-						<button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-						<input type="submit" class="btn btn-success" value="Guardar">
-					</div>
-				</form>
-			</div>
-		</div>
-	</div>
-
-	<!-- Modal Editar Vehiculo -->
-	<div class="modal fade" id="editar-vehiculo-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-		<div class="modal-dialog" role="document">
-			<div class="modal-content">
-				<form action="{% url 'editar_vehiculo' %}" method="POST">
-					<div class="modal-header">
-						<h5 class="modal-title" id="exampleModalLabel">Editar Veh&iacute;culo.</h5>
-						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-							<span aria-hidden="true">&times;</span>
-						</button>
-					</div>
-					<div class="modal-body">
-						{% csrf_token %}
-						<div class="form-group row d-none">
-							<label for="id-edit" class="col-sm-2 col-form-label">ID de Veh&iacute;culo</label>
+							<div class="form-group row d-none">
+							<label for="id-edit" class="col-sm-2 col-form-label">ID de Slot</label>
 							<div class="col-sm-10">
 								<input type="text" class="form-control" id="id-edit" name="id_edit" placeholder="">
 							</div>
 						</div>
-						<div class="form-group row">
-							<label for="placa-edit" class="col-sm-2 col-form-label">Placa</label>
-							<div class="col-sm-10">
-								<input type="text" class="form-control" id="placa-edit" name="placa_edit" placeholder="">
-							</div>
-						</div>
-						<div class="form-group row">
-							<label for="tipo-edit" class="col-sm-2 col-form-label">Tipo</label>
-							<div class="col-sm-10">
-								<input type="text" class="form-control" id="tipo-edit" name="tipo_edit" placeholder="">
-							</div>
-						</div>
-						<div class="form-group row">
-							<label for="marca-edit" class="col-sm-2 col-form-label">Marca</label>
-							<div class="col-sm-10">
-								<input type="text" class="form-control" id="marca-edit" name="marca_edit" placeholder="">
-							</div>
-						</div>
-						<div class="form-group row">
-							<label for="modelo-edit" class="col-sm-2 col-form-label">Modelo</label>
-							<div class="col-sm-10">
-								<input type="text" class="form-control" id="modelo-edit" name="modelo_edit" placeholder="">
-							</div>
-						</div>
-						<div class="form-group row">
-							<label for="anio-edit" class="col-sm-2 col-form-label">Año</label>
-							<div class="col-sm-10">
-								<input type="text" class="form-control" id="anio-edit" name="anio_edit" placeholder="">
-							</div>
-						</div>
-						
+
+
+
+		<div class="form-group row">
+			<label for="tecnico" class="col-sm-2 col-form-label">Disponible</label>
+			<div class="col-sm-10">
+				<select class="form-control" id="disponible-edit" name="disponible_edit" placeholder="">
+				{% if sloted.disponible == True %}
+  				<option value="Disponible">Disponible</option>
+ 				<option value="No-disponible">No disponible</option>
+ 				{% else %}
+ 				<option value="No-disponible">No disponible</option>
+ 				<option value="Disponible">Disponible</option>
+ 				{% endif %}
+				</select>				
+			</div>
+		</div>
+		
+		<div class="form-group row">
+			<label for="Reservacion" class="col-sm-2 col-form-label">Reservacion</label>
+			<div class="col-sm-10">
+				<select class="form-control" id="reservacion-edit" name="reservacion_edit" placeholder="">
+				{% if sloted.reservacion == True %}
+  				<option value="Reservado">Reservado</option>
+ 				<option value="No-reservado">No reservado</option>
+ 				{% else %}
+ 				<option value="No-reservado">No reservado</option>
+ 				<option value="Reservado">Reservado</option>
+ 				{% endif %}
+				</select>				
+			</div>
+		</div>
 					</div>
 					<div class="modal-footer">
 						<button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
@@ -192,29 +139,25 @@
 	</div>
 
 	<!-- Modal Eliminar Vehiculo -->
-	<div class="modal fade" id="eliminar-vehiculo-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+	<div class="modal fade" id="eliminar-slot-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
 		<div class="modal-dialog" role="document">
 			<div class="modal-content">
-				<form action="{% url 'eliminar_vehiculo' %}" method="POST">
+				<form action="{% url 'eliminar_slot' %}" method="POST">
 					<div class="modal-header">
-						<h5 class="modal-title" id="exampleModalLabel">Eliminar Veh&iacute;culo.</h5>
+						<h5 class="modal-title" id="exampleModalLabel">Eliminar slot.</h5>
 						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 							<span aria-hidden="true">&times;</span>
 						</button>
 					</div>
 					<div class="modal-body">
 						{% csrf_token %}
-						<div class="form-group row d-none">
-							<label for="id-delete" class="col-sm-2 col-form-label">ID de Veh&iacute;culo</label>
-							<div class="col-sm-10">
-								<input type="text" class="form-control" id="id-delete" name="id_delete" placeholder="">
-							</div>
-						</div>
 						<div class="form-group row justify-content-md-center">
-							<h4>¿Estás seguro que quieres eliminar el veh&iacute;culo?</h4>
-							<label for="placa-delete" class="col-sm-2 col-form-label">Placa</label>
-							<div class="col-sm-3">
-								<input type="text" readonly="" class="form-control-plaintext" id="placa-delete" name="placa_delete" placeholder="">
+							<h4>¿Estás seguro que quieres eliminar el slot?</h4>
+						</div>
+						<div class="form-group">
+							<label for="id-delete" class="col-sm-5 col-form-label">ID de slot</label>
+							<div class="col-sm-7">
+								<input type="text" class="form-control" id="id-delete" name="id_delete" placeholder="">
 							</div>
 						</div>
 					</div>
@@ -226,11 +169,9 @@
 			</div>
 		</div>
 	</div>
-
 {% endblock %}
-
 {% block extra_js %}
-	<script src="{% static 'js/vehiculos/vehiculos.js' %}"></script>
+	<script src="{% static 'js/slots/slots.js' %}"></script>
 {% endblock %}
 
 
