--- a/apps/taller/templates/nueva_visita.html
+++ b/apps/taller/templates/nueva_visita.html
@@ -8,51 +8,33 @@
 				<input type="text" class="form-control" id="vehiculo" name="id_vehiculo_visita" placeholder="">					
 			</div>
 		</div>
+
+
+
 		<div class="form-group row">
 			<label for="tecnico" class="col-sm-2 col-form-label">tecnico</label>
-			<div class="col-sm-10">
-				<input type="text" class="form-control" id="tecnico" name="id_tecnico_visita" placeholder="">					
-			</div>
-		</div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-		<div class="form-group row">
-			<label for="especializacion" class="col-sm-3 col-form-label">Slot comb</label>
-			<div class="col-sm-9">
-
-	
-				<select class="form-control" id="slot" name="id_slot_visita">
-				{% for slot in slots %}
-				{% if slot.disponible == True %}
-					<option id="slotopcion" name="id_slot_visita_opcion">{{ slot.id }}</option>
-				{% endif %}
+			<div class="col-sm-9">	
+				<select class="form-control" id="slot" name="id_tecnico_visita">
+				{% for tecnico in tecnicos %}
+					<option id="slotopcion" name="id_tecnico_visita">{{ tecnico.id }}</option>
+					
 				{% endfor %}
 				</select>
-		
-
-
 			</div>
 		</div>
 
-
-
-
-
-
-
+		<div class="form-group row">
+			<label for="especializacion" class="col-sm-2 col-form-label">Slot</label>
+			<div class="col-sm-9">	
+				<select class="form-control" id="slot" name="id_slot_visita">
+				{% for slot in slots %}
+				<!-- {% if slot.disponible == True %} -->
+					<option id="slotopcion" name="id_slot_visita_opcion">{{ slot.id }}</option>
+				<!--{% endif %}--> 
+				{% endfor %}
+				</select>
+			</div>
+		</div>
 
 
 		<div class="form-group row">
