--- a/apps/taller/templates/index.html
+++ b/apps/taller/templates/index.html
@@ -70,12 +70,32 @@
 
 <!-- Muestra mensaje de error -->
 {% if messages %}
-<div class="alert alert-danger" role="alert" style="height: 3em;">
-	{% for message in messages %}
-	<p{% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}</p>
-	{% endfor %}
+<div class="modal fade" id="mostrarmodal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h3>Error al iniciar sesión</h3>
+			</div>
+			{% for message in messages %}
+			<div class="modal-body">
+				<h4 {% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}</h4>
+			</div>
+			{% endfor %}
+			<div class="modal-footer">
+				<a href="#" data-dismiss="modal" class="btn btn-danger">Cerrar</a>
+			</div>
+		</div>
+	</div>
 </div>
 {% endif %}
+
+<script>
+	$(document).ready(function()
+	{
+	   $("#mostrarmodal").modal("show");
+	});
+ </script>
+ <!-- Fin del mensaje de error -->
 
 
 <!-- Vista para Visitante -->
