Gestion de tecnico y de especialidad

--- a/apps/taller/templates/empleados/empleados.html
+++ b/apps/taller/templates/empleados/empleados.html
@@ -74,7 +74,7 @@
 	<div class="modal-dialog">
 		<div class="modal-content">
 			<div class="modal-header">
-				<h3>Error al guardar la especialidad</h3>
+				<h3>Error al guardar el t&eacute;</h3>
 			</div>
 			{% for message in messages %}
 			<div class="modal-body">
