--- a/apps/taller/templates/index_admin.html
+++ b/apps/taller/templates/index_admin.html
@@ -3,21 +3,21 @@
 	<h3>¿Que deseas hacer hoy?</h3>
 
 	<div class="modal fade" id="exampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-	aria-hidden="true">
-	<div class="modal-dialog modal-lg" role="document">
-		<div class="modal-content">
-			<div class="modal-header">
-				<h5 class="modal-title" id="exampleModalLabel">Registrar nueva visita</h5>
-				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-					<span aria-hidden="true">&times;</span>
-				</button>
-			</div>
-			<div class="modal-body">
-				{% include 'nueva_visita.html' %}
+		aria-hidden="true">
+		<div class="modal-dialog modal-lg" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="exampleModalLabel">Registrar nueva visita</h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+					{% include 'nueva_visita.html' %}
+				</div>
 			</div>
 		</div>
 	</div>
-</div>
 
 	<div class="row mt-4 justify-content-md-between">
 
@@ -26,7 +26,8 @@
 				<div class="card-body">
 					<h4 class="card-title">Nueva Visita</h4>
 					<div class="row">
-						<p class="card-text col-sm-10 text-justify">Registre una nueva visita por parte de un cliente a su taller.</p>
+						<p class="card-text col-sm-10 text-justify">Registre una nueva visita por parte de un cliente a
+							su taller.</p>
 						<i class="fas fa-concierge-bell fa-3x"></i>
 					</div>
 				</div>
@@ -38,7 +39,8 @@
 				<div class="card-body">
 					<h4 class="card-title">Gestion de Visitas</h4>
 					<div class="row">
-						<p class="card-text col-sm-10 text-justify">Vea las visitas y procesos que se llevan a cabo en este momento.</p>
+						<p class="card-text col-sm-10 text-justify">Vea las visitas y procesos que se llevan a cabo en
+							este momento.</p>
 						<i class="fas fa-toolbox fa-3x"></i>
 					</div>
 				</div>
@@ -50,7 +52,8 @@
 				<div class="card-body">
 					<h4 class="card-title">Gesti&oacute;n de Solicitudes</h4>
 					<div class="row">
-						<p class="card-text col-sm-10 text-justify">Apruebe o rechace las solicitudes de visita sin revisar o consulte solicitudes antiguas.</p>
+						<p class="card-text col-sm-10 text-justify">Apruebe o rechace las solicitudes de visita sin
+							revisar o consulte solicitudes antiguas.</p>
 						<i class="fas fa-check-double fa-3x"></i>
 					</div>
 				</div>
@@ -59,31 +62,30 @@
 	</div>
 
 	<div class="row mt-4 justify-content-md-between">
-<<<<<<< HEAD
-
 		<a href="{% url 'empleados' %}" class="card-link">
-=======
-		<a href="" class="card-link">
->>>>>>> e7b238cdee5e653a2b830164b4f41996057d810b
 			<div class="card-index border-success col-sm-4">
 				<div class="card-body">
 					<h4 class="card-title">Gesti&oacute;n de Personal</h4>
 					<div class="row">
-						<p class="card-text col-sm-10 text-justify">Gestione a sus empleados administrativos y técnicos.</p>
+						<p class="card-text col-sm-10 text-justify">Gestione a sus empleados administrativos y técnicos.
+						</p>
 						<i class="fas fa-users fa-3x"></i>
 					</div>
 				</div>
 			</div>
 		</a>
-<<<<<<< HEAD
 		<a href="{% url 'especialidad' %}" class="card-link">
 			<div class="card-index border-success col-sm-4">
 				<div class="card-body">
 					<h4 class="card-title">Gesti&oacute;n de Especialidades</h4>
 					<div class="row">
-						<p class="card-text col-sm-10 text-justify">Gestione las diferentes especialidades de sus empleados.</p>
+						<p class="card-text col-sm-10 text-justify">Gestione las diferentes especialidades de sus
+							empleados.</p>
 						<i class="fas fa-users fa-3x"></i>
-=======
+					</div>
+				</div>
+			</div>
+		</a>
 		<a href="{% url 'gestionar_slots' %}" class="card-link">
 			<div class="card-index border-success col-sm-4">
 				<div class="card-body">
@@ -91,14 +93,9 @@
 					<div class="row">
 						<p class="card-text col-sm-10 text-justify">Gestione los slots bla bla bla bla bla.</p>
 						<i class="fas fa-toolbox fa-3x"></i>
->>>>>>> e7b238cdee5e653a2b830164b4f41996057d810b
 					</div>
 				</div>
 			</div>
 		</a>
-<<<<<<< HEAD
-
-=======
->>>>>>> e7b238cdee5e653a2b830164b4f41996057d810b
 	</div>
 </div>
