Gestión de Técnicos - Lista

--- a/apps/users/templates/gestion_usuarios/registro_tecnico.html
+++ b/apps/users/templates/gestion_usuarios/registro_tecnico.html
@@ -1,4 +1,4 @@
-<form action="{% url 'almacenar_tecnico' %}" method="POST">
+<form action="{% url 'registro_tecnico' %}" method="POST">
 	<div class="modal-header">
 		<h5 class="modal-title" id="exampleModalLabel">Agregar nuevo t&eacute;cnico.</h5>
 		<button type="button" class="close" data-dismiss="modal" aria-label="Close">
