--- a/apps/taller/templates/index_admin.html
+++ b/apps/taller/templates/index_admin.html
@@ -62,10 +62,10 @@
 	</div>
 
 	<div class="row mt-4 justify-content-md-between">
-		<a href="{% url 'empleados' %}" class="card-link">
+		<a href="{% url 'gestion_usuarios' %}" class="card-link">
 			<div class="card-index border-success col-sm-4">
 				<div class="card-body">
-					<h4 class="card-title">Gesti&oacute;n de Personal</h4>
+					<h4 class="card-title">Gesti&oacute;n de Usuarios</h4>
 					<div class="row">
 						<p class="card-text col-sm-10 text-justify">Gestione a sus empleados administrativos y técnicos.
 						</p>
@@ -89,7 +89,7 @@
 		<a href="{% url 'gestionar_slots' %}" class="card-link">
 			<div class="card-index border-success col-sm-4">
 				<div class="card-body">
-					<h4 class="card-title">Gesti&oacute;n de slots</h4>
+					<h4 class="card-title">Gesti&oacute;n de Slots</h4>
 					<div class="row">
 						<p class="card-text col-sm-10 text-justify">Gestione los slots bla bla bla bla bla.</p>
 						<i class="fas fa-toolbox fa-3x"></i>
