--- a/apps/taller/templates/especialidad/especialidad.html
+++ b/apps/taller/templates/especialidad/especialidad.html
@@ -137,7 +137,7 @@
 					<div class="form-group row">
 						<label for="nombre-edit" class="col-sm-3 col-form-label">Especialidad</label>
 						<div class="col-sm-10">
-							<input type="text" class="form-control" id="nombre-edit" name="nombre_edit" placeholder="">
+							<input type="text" class="form-control" id="nombre-edit" name="nombre_edit" placeholder="" readonly="true">
 						</div>
 					</div>
 					<div class="form-group row">
