--- a/apps/taller/templates/especialidad/especialidad.html
+++ b/apps/taller/templates/especialidad/especialidad.html
@@ -1,6 +1,35 @@
 {% extends 'base/base.html' %}
 {% load static %}
 {% block main_container %}
+<script>
+       $(document).ready(function() {
+            $("#Guardar").click(function(){	
+
+            	var nombre = $("#nombre").val();
+            	var descripcion = $("#descripcion").val();
+            	var letra=/^[a-zA-ZáÁéÉíÍóÓúÚñÑüÜ\s]+$/;
+
+            	if(nombre === "" || descripcion === "" ){
+            		alert("Todos los campos son obligatorios");
+            		return false;
+            	}
+            	if(!letra.test(nombre)){
+            		alert("Nombre de la especialidad es incorrecto");
+            		return false;
+
+            	}else if(nombre.length > 30){
+            		alert("Nombre de especialidad es demasiado largo");
+            		return false;
+            	}
+            	if(!letra.test(descripcion)){
+            		alert("Tipo de descripcion incorrecta");
+            		return false;
+            	}
+
+            });
+        });
+</script>
+
 <div class="col-md-11 py-3 px-4 main-container">
 
 	<h4>Administraci&oacute;n de especialidades</h4>
@@ -107,7 +136,7 @@
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-					<input type="submit" class="btn btn-success" value="Guardar">
+					<input type="submit" class="btn btn-success" value="Guardar" id="Guardar">
 				</div>
 			</form>
 		</div>
