--- a/apps/taller/templates/nueva_visita.html
+++ b/apps/taller/templates/nueva_visita.html
@@ -1,4 +1,4 @@
-<script>
+<!--<script>
        $(document).ready(function() {
             $("#Registrar").click(function(){
 
@@ -24,7 +24,7 @@
             	
             });
         });
-</script>
+</script>-->
 
 <form method="POST" action="{% url 'almacenar_visita' %}" class="post-form">
 
