--- a/apps/taller/templates/gestionar_slots.html
+++ b/apps/taller/templates/gestionar_slots.html
@@ -3,7 +3,24 @@
 
 {% block title %}Gestionar Slot{% endblock %}
 
-{% block main_container %}
+{% block main_container %}  
+
+<!---<script>
+       $(document).ready(function() {
+            $("#Editar").click(function(){	 
+            	var id = $("#id-edit").val();
+            	var disponible = $("#disponible-edit").val();
+            	var reservacion = $("#reservacion-edit").val();
+
+            	if(id === "" || disponible === "" || reservacion === "" ){
+            		alert("Todos los campos son obligatorios");
+            		return false;
+            	} 
+
+             });  
+        });
+</script>-->
+
 	<div class="col-md-11 py-3 px-4 main-container">
 
 		<h4>Slots</h4>
@@ -93,7 +110,7 @@
 							<div class="form-group row d-none">
 							<label for="id-edit" class="col-sm-2 col-form-label">ID de Slot</label>
 							<div class="col-sm-10">
-								<input type="text" class="form-control" id="id-edit" name="id_edit" placeholder="">
+								<input type="text" class="form-control" id="id-edit" name="id_edit" placeholder="" required="">
 							</div>
 						</div>
 
@@ -102,7 +119,7 @@
 		<div class="form-group row">
 			<label for="tecnico" class="col-sm-2 col-form-label">Disponible</label>
 			<div class="col-sm-10">
-				<select class="form-control" id="disponible-edit" name="disponible_edit" placeholder="">
+				<select class="form-control" id="disponible-edit" name="disponible_edit" placeholder="" required="">
 				{% if sloted.disponible == True %}
   				<option value="Disponible">Disponible</option>
  				<option value="No-disponible">No disponible</option>
@@ -117,7 +134,7 @@
 		<div class="form-group row">
 			<label for="Reservacion" class="col-sm-2 col-form-label">Reservacion</label>
 			<div class="col-sm-10">
-				<select class="form-control" id="reservacion-edit" name="reservacion_edit" placeholder="">
+				<select class="form-control" id="reservacion-edit" name="reservacion_edit" placeholder="" required="">
 				{% if sloted.reservacion == True %}
   				<option value="Reservado">Reservado</option>
  				<option value="No-reservado">No reservado</option>
@@ -131,7 +148,7 @@
 					</div>
 					<div class="modal-footer">
 						<button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-						<input type="submit" class="btn btn-success" value="Editar">
+						<input type="submit" class="btn btn-success" value="Editar" id="Editar">
 					</div>
 				</form>
 			</div>
