--- a/apps/taller/templates/gestionar_visitas.html
+++ b/apps/taller/templates/gestionar_visitas.html
@@ -5,7 +5,7 @@
 
 {% block main_container %}
 
-<script>
+<!--<script>
        $(document).ready(function() {
             $("#Editar").click(function(){
             	
@@ -46,7 +46,7 @@
             	  }
             	});
         	});
-</script>
+</script>-->
 
 
 
