--- a/apps/taller/templates/nuevo_slot.html
+++ b/apps/taller/templates/nuevo_slot.html
@@ -6,7 +6,7 @@
 		<div class="form-group row">
 			<label for="tecnico" class="col-sm-2 col-form-label">Disponible</label>
 			<div class="col-sm-10">
-				<select class="form-control" id="Disponible" name="Disponible" placeholder="">
+				<select class="form-control" id="Disponible" name="Disponible" placeholder="" required="">
   				<option value="Disponible">Disponible</option>
  				<option value="No-disponible">No disponible</option>
 				</select>				
@@ -16,7 +16,7 @@
 		<div class="form-group row">
 			<label for="Reservacion" class="col-sm-2 col-form-label">Reservacion</label>
 			<div class="col-sm-10">
-				<select class="form-control" id="Reservacion" name="Reservacion" placeholder="">
+				<select class="form-control" id="Reservacion" name="Reservacion" placeholder="" required="">
   				<option value="Reservado">Reservado</option>
  				<option value="No-reservado">No reservado</option>
 				</select>				
